2005-05-04  Martin Baulig  <martin@ximian.com>

	* ecore.cs (FieldExpr.DoResolveLValue): Always call fb.SetAssigned().

2005-05-04  Martin Baulig  <martin@ximian.com>

	Fix #74655.

	* statement.cs (Switch.SimpleSwitchEmit): Always emit the default
	section at the end; make things work if `default' is not the last
	section.	

2005-05-04  Martin Baulig  <martin@ximian.com>

	Fix #70400.

	* statement.cs (Switch): Replaced the `got_default' field with a
	`default_section' one.
	(Switch.CheckSwitch): Set `default_section' here.
	(Switch.Resolve): If we're a constant switch and the constant is
	not found, use the default section.

2005-05-03  Martin Baulig  <martin@ximian.com>

	* expression.cs (ArrayAccess.EmitGetLength): New public method.

	* statement.cs (Foreach.ArrayForeach): New nested class.
	(Foreach.TemporaryVariable): New nested class.
	(Foreach.EmitArrayForeach): Removed; this is now in the new
	ArrayForeach class.

2005-05-02  Martin Baulig  <martin@ximian.com>

	Fix #70182.

	* flowanalysis.cs (FlowBranching.UsageVector.MergeJumpOrigins):
	Also `And' the locals if the old vector is null.
	(FlowBranching.UsageVector.BitVector.And): Allow `vector' being
	null; in this case we basically reset all the variables.	

2005-05-02  Martin Baulig  <martin@ximian.com>

	Fix #74529.

	* flowanalysis.cs (FlowBranching.UsageVector.MergeBreakOrigins):
	Added `FlowBranching branching' argument; always `and' the
	variables instead of `or'ing them unless we're an infinite loop.

	* statement.cs (While.Resolve): Create a new sibling unless we're
	infinite.	

2005-05-02  Martin Baulig  <martin@ximian.com>

	Fix #70140.

	* class.cs (ConstructorInitializer.Resolve): Added `Block block'
	arguments; use it instead of creating a new TopLevelBlock.
	(Constructor.Emit): Call `block.ResolveMeta ()' before resolving
	our ConstructorInitializer.

	* statement.cs
	(TopLevelBlock.TopLevelBranching): New public property.
	(TopLevelBlock.ResolveMeta): New public method; call ResolveMeta()