@@ -1118,7 +1118,7 @@ namespace Mono.CSharp {
 			}
 		}
 
-		public override bool IsClsCompliaceRequired(DeclSpace ds)
+		public override bool IsClsComplianceRequired(DeclSpace ds)
 		{
 			return is_cls_compliant;
 		}
@@ -1349,7 +1349,7 @@ namespace Mono.CSharp {
  			}
 		}
 
-		public override bool IsClsCompliaceRequired(DeclSpace ds)
+		public override bool IsClsComplianceRequired(DeclSpace ds)
 		{
 			return CodeGen.Assembly.IsClsCompliant;
 			}
