@@ -1,3 +1,9 @@
+2005-05-06  Martin Baulig  <martin@ximian.com>
+
+	* attribute.cs
+	(Attributable.IsClsComplianceRequired): Fix typo in the method name.
+	(AttributeTester.AnalyzeTypeCompliance): Add generics support.
+
 2005-05-04  Martin Baulig  <martin@ximian.com>
 
 	* ecore.cs (FieldExpr.DoResolveLValue): Always call fb.SetAssigned().
